--- a/src/templates/Admin/estadisticas.html
+++ b/src/templates/Admin/estadisticas.html
@@ -171,11 +171,33 @@
   </div>
 </aside>
 
-    <section class="p-4 sm:ml-64" id="section">
-      <div
-        class="p-4  mt-14"
-      >
-        
+    <section class="p-4 sm:ml-64 mt-10" id="section">
+      <div class="flex relative   rounded  h-10 mt-[15px] ">
+        <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
+          <li class="inline-flex items-center">
+            <a href="#"
+              class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-[#1e54ff] dark:text-gray-400 dark:hover:text-white">
+              <svg class="w-3 h-3 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+                viewBox="0 0 20 20">
+                <path
+                  d="m19.707 9.293-2-2-7-7a1 1 0 0 0-1.414 0l-7 7-2 2a1 1 0 0 0 1.414 1.414L2 10.414V18a2 2 0 0 0 2 2h3a1 1 0 0 0 1-1v-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v4a1 1 0 0 0 1 1h3a2 2 0 0 0 2-2v-7.586l.293.293a1 1 0 0 0 1.414-1.414Z" />
+              </svg>
+              Tablero
+            </a>
+          </li>
+    
+          <li aria-current="page">
+            <div class="flex items-center">
+              <svg class="rtl:rotate-180 w-3 h-3 text-gray-400 mx-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                fill="none" viewBox="0 0 6 10">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="m1 9 4-4-4-4" />
+              </svg>
+              <span class="cursor-default ms-1 text-sm font-medium text-gray-500 md:ms-2 dark:text-gray-400">Base de Datos</span>
+            </div>
+          </li>
+        </ol>
+      </div>
      
         <div class="grid grid-cols-2 gap-4 mb-4">
           <div
@@ -185,18 +207,18 @@
             
           </p>
         </div>
-          <div
-            class="flex items-center justify-center rounded bg-[#0b1739] h-[500px] dark:bg-gray-800 " id="'main"
-          >
-            <p class="text-2xl text-gray-400 dark:text-gray-500">
-              
-            </p>
-          </div>
+        <div
+        class="flex items-center justify-center rounded bg-[#0b1739] h-[500px] dark:bg-gray-800 p-[10px]" id="main"
+      >
+        <p class="text-2xl text-gray-400 dark:text-gray-500">
+          
+        </p>
+      </div>
         
           
         
         </div>
-        </div>
+     
 
 
     </section>
