--- a/src/templates/Admin/tablero-admin.html
+++ b/src/templates/Admin/tablero-admin.html
@@ -255,7 +255,7 @@
           </p>
         </div>
           <div
-            class="flex items-center justify-center rounded bg-[#0b1739] h-[500px] dark:bg-gray-800 " id="'main"
+            class="flex items-center justify-center rounded bg-[#0b1739] h-[500px] dark:bg-gray-800 p-[10px]" id="main"
           >
             <p class="text-2xl text-gray-400 dark:text-gray-500">
               
