--- a/src/templates/Admin/bases-datos.html
+++ b/src/templates/Admin/bases-datos.html
@@ -204,7 +204,7 @@
   <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 mb-4"> 
 
  
-    <div class="flex flex-col items-center justify-center p-4 rounded-lg bg-[#0b1739] text-[#8fc8ff] font-medium shadow-md w-full col-span-1 sm:col-span-2 lg:col-span-1 lg:col-start-2">
+    <div class="flex flex-col items-center justify-center p-4 rounded-lg bg-[#0b1739] text-[#8fc8ff] font-medium shadow-md w-full col-span-1 sm:col-span-2 lg:col-span-1">
       <div class="w-full flex items-center mb-3">
         <i class="ti ti-database-export text-2xl" ></i>
           <p class="text-lg ml-2">Descargar Base de Datos Actual</p>
